fix letra seccion nosotros home page en version mobile

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2010,54 +2010,49 @@ body.is-touch .spotlight {
 .wrapper {
   padding: 6em 0 4em 0; }
   .wrapper.style2 {
-    background: #272833; }
+    background: #39c088; }
     .wrapper.style2 input[type="text"]:focus,
     .wrapper.style2 input[type="password"]:focus,
     .wrapper.style2 input[type="email"]:focus,
     .wrapper.style2 select:focus,
     .wrapper.style2 textarea:focus {
       border-color: rgba(255, 255, 255, 0.5); }
-    .wrapper.style2 input[type="submit"],
-    .wrapper.style2 input[type="reset"],
-    .wrapper.style2 input[type="button"],
-    .wrapper.style2 .button {
-      width: 100%; }
-      .wrapper.style2 input[type="submit"]:hover, .wrapper.style2 input[type="submit"]:active,
-      .wrapper.style2 input[type="reset"]:hover,
-      .wrapper.style2 input[type="reset"]:active,
-      .wrapper.style2 input[type="button"]:hover,
-      .wrapper.style2 input[type="button"]:active,
-      .wrapper.style2 .button:hover,
-      .wrapper.style2 .button:active {
+    .wrapper.style2 input[type="submit"]:hover, .wrapper.style2 input[type="submit"]:active,
+    .wrapper.style2 input[type="reset"]:hover,
+    .wrapper.style2 input[type="reset"]:active,
+    .wrapper.style2 input[type="button"]:hover,
+    .wrapper.style2 input[type="button"]:active,
+    .wrapper.style2 .button:hover,
+    .wrapper.style2 .button:active {
+      background-color: rgba(255, 255, 255, 0.075) !important;
+      box-shadow: inset 0 0 0 1px rgba(255, 255, 255, 0.5) !important;
+      color: #ffffff !important; }
+    .wrapper.style2 input[type="submit"]:active,
+    .wrapper.style2 input[type="reset"]:active,
+    .wrapper.style2 input[type="button"]:active,
+    .wrapper.style2 .button:active {
+      background-color: rgba(255, 255, 255, 0.25) !important; }
+    .wrapper.style2 input[type="submit"].primary,
+    .wrapper.style2 input[type="reset"].primary,
+    .wrapper.style2 input[type="button"].primary,
+    .wrapper.style2 .button.primary {
+      background-color: #ffffff;
+      color: #AAC538 !important; }
+      .wrapper.style2 input[type="submit"].primary:hover, .wrapper.style2 input[type="submit"].primary:active,
+      .wrapper.style2 input[type="reset"].primary:hover,
+      .wrapper.style2 input[type="reset"].primary:active,
+      .wrapper.style2 input[type="button"].primary:hover,
+      .wrapper.style2 input[type="button"].primary:active,
+      .wrapper.style2 .button.primary:hover,
+      .wrapper.style2 .button.primary:active {
         background-color: rgba(255, 255, 255, 0.075) !important;
         box-shadow: inset 0 0 0 1px rgba(255, 255, 255, 0.5) !important;
         color: #ffffff !important; }
-      .wrapper.style2 input[type="submit"]:active,
-      .wrapper.style2 input[type="reset"]:active,
-      .wrapper.style2 input[type="button"]:active,
-      .wrapper.style2 .button:active {
+      .wrapper.style2 input[type="submit"].primary:active,
+      .wrapper.style2 input[type="reset"].primary:active,
+      .wrapper.style2 input[type="button"].primary:active,
+      .wrapper.style2 .button.primary:active {
         background-color: rgba(255, 255, 255, 0.25) !important; }
-      .wrapper.style2 input[type="submit"].primary,
-      .wrapper.style2 input[type="reset"].primary,
-      .wrapper.style2 input[type="button"].primary,
-      .wrapper.style2 .button.primary {
-        background-color: #ffffff;
-        color: #AAC538 !important; }
-        .wrapper.style2 input[type="submit"].primary:hover, .wrapper.style2 input[type="submit"].primary:active,
-        .wrapper.style2 input[type="reset"].primary:hover,
-        .wrapper.style2 input[type="reset"].primary:active,
-        .wrapper.style2 input[type="button"].primary:hover,
-        .wrapper.style2 input[type="button"].primary:active,
-        .wrapper.style2 .button.primary:hover,
-        .wrapper.style2 .button.primary:active {
-          background-color: rgba(255, 255, 255, 0.075) !important;
-          box-shadow: inset 0 0 0 1px rgba(255, 255, 255, 0.5) !important;
-          color: #ffffff !important; }
-        .wrapper.style2 input[type="submit"].primary:active,
-        .wrapper.style2 input[type="reset"].primary:active,
-        .wrapper.style2 input[type="button"].primary:active,
-        .wrapper.style2 .button.primary:active {
-          background-color: rgba(255, 255, 255, 0.25) !important; }
   .wrapper.fade-down > .container {
     -moz-transform: translate(0,0);
     -webkit-transform: translate(0,0);
@@ -2618,6 +2613,10 @@ body.is-touch #banner {
   /* Wrapper */
   .wrapper {
     padding: 3em 1.25em 1em 1.25em; }
+  .wrapper.style2 {
+    background: #474f54 !important; }
+    .wrapper.style2 .button {
+      width: 100%; }
   /* Banner */
   #banner .content {
     padding: 3em 1.5625em 5.25em 1.5625em; }
